test(chaos): make the lifecycle guards actually falsifiable
The new IT did not compile: List.of/List.copyOf are Java 9+ APIs, and this
module compiles through Jabel against the Java 8 API surface - which is why
ManagedPCInstance reaches for UniLists instead.

Worse, once it compiled, aStopWhileQueuedAbortsTheStartAndReleasesTheGuard
passed with the stopRequested guard removed. AbstractExecutorService.submit
wraps the task in a FutureTask, which captures the throwable rather than
propagating it, so a run() that blew up on the KafkaClientUtils it must never
reach looked identical to one that aborted cleanly - and parallelConsumer stays
null down both paths, so the other assertion did not separate them either. The
branch's central regression test could not fail.

runAll() now drains each FutureTask outcome. Verified by mutation: with the
guard disabled the test fails on the NPE from the broker path; with it restored,
green. The other two tests were mutation-checked the same way and both fail for
the right reason - refused-start returns true, and a second closer enters
close().

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>